manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: focalboard
  labels:
    name: focalboard
