manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: focalboard-svc
  namespace: focalboard
spec:
  selector:
    app: focalboard-deployment
  ports:
    - protocol: TCP
      port: 8000       
      targetPort: 8000
